<resources>
    <string name="app_name">Marvel App</string>
    <string name="series_image">Series Image</string>
    <string name="we_couldnt_find_anything_with_the_term_entered">We couldn\'t find anything with the term entered</string>
    <string name="please_check_your_search_and_try_again">Please check your search and try again</string>
    <string name="image_search_not_found">Image search not found</string>
    <string name="back">Back</string>
    <string name="marvel_logo">Marvel logo</string>
    <string name="cover_image">Cover image</string>
    <string name="series">Series</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="share_icon">Share icon</string>
    <string name="series_details_image">Series details image</string>
    <string name="characters">Characters</string>
    <string name="character_image">Character Image</string>
    <string name="title_login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="title_register">Register</string>
    <string name="full_name">Full name</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="hello_name">Hello, <b>%1$s</b></string>
    <string name="access_and_security">Access and security</string>
    <string name="save">Save</string>
    <string name="creators_image">Creators image</string>
    <string name="creators_name">Stan Lee</string>
    <string name="creators">Creators</string>
    <string name="comic">Comics</string>
    <string name="splash_image">Splash Image</string>
    <string name="comic_details_image">Comic details image</string>
    <string name="home_characters_image">Home characters image</string>
    <string name="home_series_image">Home series image</string>
    <string name="home_comics_image">Home comics image</string>
    <string name="home_creators_image">Home creators image</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="comics_with_double_dot">Comics:</string>
    <string name="characters_with_double_dots">Characters:</string>
    <string name="creators_with_double_dot">Creators:</string>
    <string name="price">Price:</string>
    <string name="published">Published:</string>
    <string name="pages">Pages:</string>
    <string name="series_creators_chip">Series:</string>
    <string name="hqs_creators_chips">HQ\'s:</string>
    <string name="events_chip">Events:</string>
    <string name="series_with_double_dot">Series:</string>
    <string name="facebook_app_id">738510870395542</string>
    <string name="fb_login_protocol_scheme">fb738510870395542</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="password_cannot_be_null">Password cannot be null</string>
    <string name="must_contain_at_least_6_characters">Must contain at least 6 characters</string>
    <string name="must_be_the_same_as_password">Must be the same password</string>
    <string name="an_error_has_occurred_check_email_and_password">An error has occurred. Check your email and password</string>
    <string name="validate_your_email">Validate your email</string>
    <string name="its_necessary_to_logged_to_access_favorites">It\'s necessary to be logged to access favorites</string>
    <string name="its_necessary_to_logged_to_access_profile">It\'s necessary to be logged to your profile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password">Password recover</string>
    <string name="recover">Recover</string>
    <string name="email_sent">Email sent, verify</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="current_email">Current email</string>
    <string name="current_password">Current password</string>
    <string name="update_canceled">Update canceled</string>
    <string name="invalid_email_or_password">Invalid password or email</string>
    <string name="confirmation">Confirmation</string>
    <string name="question">Question 1</string>
    <string name="marvel">Marvel</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_start_message">Do you know everything about marvel universe?</string>
    <string name="start">Start</string>
    <string name="quiz_start_message_2">Want to know?</string>
    <string name="fished_quiz">Quiz finished!</string>
    <string name="quiz_result_message">You got <b>%1$s</b> questions right!</string>
    <string name="iron_man">iron_man</string>
    <string name="groot">groot</string>
    <string name="captain_america">Captain america</string>
    <string name="trophy">trophy</string>
    <string name="prize">prize</string>
    <string name="image_question">image question</string>
    <string name="no_internet_found">No internet found</string>
    <string name="please_check_your_internet_and_try_again">Please check your internet and try again</string>
    <string name="no_internet_error">No internet error</string>
    <string name="new_password">New password</string>
    <string name="share_series_1º">Hey, here is a series that you might like:</string>
    <string name="share_characters_1">Hey here is a character you might like:</string>
    <string name="share_comic_1">Hey, here is a comic you might like:</string>
    <string name="share_creators_1">Hey, here is a creator you might like:</string>
    <string name="name">Name: </string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="image">Image: </string>
    <string name="share_characters_2">To learn more about this character download the Marvel App</string>
    <string name="share_comic_2">To learn more about this comic download the Marvel App</string>
    <string name="share_creator_2">To learn more about the works of this creator download Marvel App</string>
    <string name="share_series_2">To learn more about this series download the Marvel App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_icon">Close icon</string>
    <string name="fullscreen_image_dialog">Fullscreen image dialog</string>
    <string name="canceled">Canceled</string>
    <string name="character_added_to_favorites">Character added to favorites</string>
    <string name="character_removed_from_favorites">Character removed from favorites</string>
    <string name="comic_added_to_favorites">Comic added to favorites</string>
    <string name="comic_removed_from_favorites">Comic removed from favorites</string>
    <string name="creator_added_to_favorites">Creator added to favorites</string>
    <string name="creator_removed_from_favorites">Creator removed from favorites</string>
    <string name="serie_added_to_favorites">Serie added to favorites</string>
    <string name="serie_removed_from_favories">Serie removed from favorites</string>
    <string name="button_next_question">button next question</string>
    <string name="submit">Submit</string>
    <string name="finish">FINISH</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="your_score_is_out_of">Your score is %1$d out of %2$d</string>
    <string name="exit_the_quiz">Exit the quiz</string>
    <string name="supporting_text">Are you sure you want to end the quiz ?</string>
    <string name="decline">Decline</string>
    <string name="accept">accept</string>
    <string name="no_favorite_creators">No favorite creators</string>
    <string name="no_favorite_characters">No favorite characters</string>
    <string name="no_favorite_comics">No favorite comics</string>
    <string name="no_favorite_series">No favorite series</string>
</resources>

