<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.view.QuizResultActivity"
    android:background="@color/color_gray_dark">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/quizResultToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:minHeight="?attr/actionBarSize"
        android:padding="@dimen/dimen_10dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iwCloseQuizResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_close_24"
                android:contentDescription="@string/close_icon"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:tint="@color/color_white" />

            <ImageView
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_50dp"
                android:contentDescription="@string/marvel_logo"
                android:src="@drawable/marvel_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:gravity="center"
        android:text="@string/fished_quiz"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizResultToolbar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:layout_marginTop="@dimen/dimen_150dp"
        android:src="@drawable/iron_man"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/quizResultToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iron_man" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:layout_marginTop="@dimen/dimen_250dp"
        android:layout_marginEnd="@dimen/dimen_150dp"
        android:src="@drawable/groot"
        app:layout_constraintEnd_toEndOf="@+id/quizResultToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/groot" />

    <ImageView
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:layout_marginStart="@dimen/dimen_150dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/capitan_america"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/captain_america" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/trofeu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/trophy" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_100dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        android:backgroundTint="@color/color_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_60dp"
            android:src="@drawable/prize"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:contentDescription="@string/prize"
            tools:ignore="RtlHardcoded">

        </ImageView>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/quiz_result_message"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dim_25sp"
            android:layout_marginStart="@dimen/dimen_70dp"
            android:layout_marginTop="@dimen/dimen_15dp">

        </TextView>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/quizResultBottomNav"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>