<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_gray_dark">

    <TextView
        android:id="@+id/confirmTitle"
        android:text="@string/confirmation"
        android:textColor="@color/mainTitles"
        android:layout_margin="@dimen/dimen_32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmTitle"
        android:hint="@string/current_email"
        android:textColorHint="@color/color_red"
        app:hintTextColor="@color/color_red"
        android:layout_margin="@dimen/dimen_32dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailConfirm"
        android:hint="@string/current_password"
        android:textColorHint="@color/color_red"
        app:hintTextColor="@color/color_red"
        android:layout_margin="@dimen/dimen_32dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancelConfirmDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/color_red"
        android:layout_margin="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirmConfirmDialog"/>

    <Button
        android:id="@+id/btnConfirmConfirmDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_red"
        android:text="@string/confirm"
        android:layout_margin="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>