<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_gray_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".quiz.QuizStartFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/quizStartToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:minHeight="?attr/actionBarSize"
        android:padding="@dimen/dimen_10dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_white" />

            <ImageView
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_50dp"
                android:contentDescription="@string/marvel_logo"
                android:src="@drawable/marvel_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tv_app_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dim_25sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_150dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@color/color_white"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:cardMaxElevation="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quiz_start_message"
                android:textStyle="bold"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/dim_25sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quiz_start_message_2"
                android:textColor="@color/color_gray_dark"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_20sp">
            </TextView>

            <Button
                android:id="@+id/btnStartQuiz"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:backgroundTint="@color/color_black"
                android:text="@string/start">

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/quizStartBottomNav"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_marginTop="@dimen/dimen_180dp"/>



</LinearLayout>